# -pdf-mcp-

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: pdf_mcp_server.py
